updates for transaction collection
